--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,6 @@ remote_theme: hydecorp/hydejack@v9.2.1
 url: https://pietrolc.github.io/
 baseurl: /watercolors
 
+accent_image: /assets/img/pexels-zaksheuskaya-709412-1568607.jpg"
+accent_color: rgb(79,177,186)
+
