Updated theme color Set google fonts

--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,6 @@ baseurl: /watercolors
 accent_image: /assets/img/pexels-zaksheuskaya-709412-1568607.jpg"
 accent_color: rgb(79,177,186)
 
+theme_color:  rgb(25,55,71)
+
+google_fonts: true
