--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,15 @@ accent_color: rgb(79,177,186)
 
 theme_color:  rgb(25,55,71)
 
-google_fonts: true
+font:         Noto Sans, Helvetica, Arial, sans-serif
+font_heading: Roboto Slab, Helvetica, Arial, sans-serif
+google_fonts: Roboto+Slab:700|Noto+Sans:400,400i,700,700i
 
 paginate:      10
 paginate_path: '/:num/'
+
+hydejack:
+  dark_mode:
+    dynamic: true
+    icon:    true
+    always:  false
