--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,30 @@
-remote_theme: hydecorp/hydejack@v9.2.1
+title: Your Site Title
+description: A short description of your site (~150 chars)
 
 url: https://pietrolc.github.io/
 baseurl: /watercolors
+
+# Author Information
+author:
+  name: Your Name
+  email: your@email.com
+  about: |
+    This is a brief bio about you.
+    You can add multiple paragraphs here.
+
+# Menu Configuration
+menu:
+  - title: Home
+    url: /
+  - title: About
+    url: /about/
+  - title: Blog
+    url: /blog/
 
 accent_image: /assets/img/pexels-zaksheuskaya-709412-1568607.jpg
 accent_color: rgb(79,177,186)
 
 theme_color:  rgb(25,55,71)
-
-font:         Noto Sans, Helvetica, Arial, sans-serif
-font_heading: Roboto Slab, Helvetica, Arial, sans-serif
-google_fonts: Roboto+Slab:700|Noto+Sans:400,400i,700,700i
 
 paginate:      10
 paginate_path: '/:num/'
@@ -20,3 +34,35 @@ hydejack:
     dynamic: true
     icon:    true
     always:  false
+    
+# Analytics
+analytics:
+  provider: goatcounter
+  goatcounter:
+    code: pwc # Replace with your GoatCounter code
+    
+# Plugins
+plugins:
+  - jekyll-seo-tag
+  - jekyll-github-metadata
+  - jekyll-coffeescript
+  - jekyll-commonmark-ghpages
+  - jekyll-gist
+  - jekyll-paginate
+  - jekyll-relative-links
+  - jekyll-optional-front-matter
+  - jekyll-readme-index
+  - jekyll-default-layout
+  - jekyll-titles-from-headings
+  - jekyll-remote-theme
+
+# Theme
+theme: jekyll-theme-hydejack
+
+remote_theme: hydecorp/hydejack@v9.2.1
+
+# Exclude files
+exclude:
+  - README.md
+  - LICENSE
+
