Added social for author

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ author:
   about: |
     This is a brief bio about you.
     You can add multiple paragraphs here.
+  social:
+    instagram: pietrowatercolor
 
 # Menu Configuration
 menu:
