--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,8 @@ author:
     This is a brief bio about you.
     You can add multiple paragraphs here.
   social:
-    instagram: pietrowatercolor
+    youtube: https://www.youtube.com/@PietroLCWatercolours
+    instagram: https://www.instagram.com/pietrowatercolor
 
 # Menu Configuration
 menu:
