--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,17 @@ baseurl: /watercolors
 
 lang: en # Language of your content
 
+# A shorter description for the sidebar.
+tagline:               Change `tagline` in `_config.yml`
+
+# A list of keywords for your blog
+keywords:              []
+
+# A (square) logo for your site.
+# If provided, it will be shown at the top of the sidebar.
+# It also used by the `jekyll-seo-tag` plugin.
+logo:                  /assets/img/logo.png
+
 defaults:
   - scope:
       type: posts
@@ -21,9 +32,17 @@ author:
   about: |
     This is a brief bio about you.
     You can add multiple paragraphs here.
-  social:
-    youtube: https://www.youtube.com/@PietroLCWatercolours
-    instagram: https://www.instagram.com/pietrowatercolor
+  
+  youtube: https://www.youtube.com/@PietroLCWatercolours
+  instagram: https://www.instagram.com/pietrowatercolor
+    
+    # This photo will be used in the about section
+  picture:
+    path:            https://via.placeholder.com/128x128
+    # srcset is optional, but can be used to provide higher res versions for retina displays
+    srcset:
+      1x:            https://via.placeholder.com/128x128
+      2x:            https://via.placeholder.com/256x256
 
 # Menu Configuration
 menu:
@@ -43,6 +62,12 @@ timezone: Europe/Rome
 
 paginate:      10
 paginate_path: '/:num/'
+
+# This text will appear in a `<small>` tag in the footer of every page.
+copyright:             © 2025. All rights reserved.
+
+# Format of the permalinks
+permalink:             /:categories/:year-:month-:day-:title/
 
 hydejack:
   dark_mode:
