--- a/_config.yml
+++ b/_config.yml
@@ -38,12 +38,12 @@ author:
     
     # This photo will be used in the about section
   picture:
-    path:            https://via.placeholder.com/128x128
+    path:            https://pietrolc.github.io/watercolors/assets/img/pietro_256.jpg
     # srcset is optional, but can be used to provide higher res versions for retina displays
     srcset:
-      1x:            https://via.placeholder.com/128x128
-      2x:            https://via.placeholder.com/256x256
-
+      1x:            https://pietrolc.github.io/watercolors/assets/img/pietro_128.jpg
+      2x:            https://pietrolc.github.io/watercolors/assets/img/pietro_256.jpg
+      
 # Menu Configuration
 menu:
   - title: Home
