--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ keywords:              []
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
 # It also used by the `jekyll-seo-tag` plugin.
-logo:                  /assets/img/logo.png
+logo:                  https://pietrolc.github.io/watercolors/assets/img/pietro_256.jpg
 
 defaults:
   - scope:
