--- a/_config.yml
+++ b/_config.yml
@@ -33,10 +33,10 @@ author:
     This is a brief bio about you.
     You can add multiple paragraphs here.
   
-  socials:
-    links: 
-    - https://www.youtube.com/@PietroLCWatercolours
-    - https://www.instagram.com/pietrowatercolor
+  social:
+    youtube: https://www.youtube.com/@PietroLCWatercolours
+    instagram: https://www.instagram.com/pietrowatercolor
+    website: https://www.pietrolc.com
     
     # This photo will be used in the about section
   picture:
