--- a/_config.yml
+++ b/_config.yml
@@ -34,9 +34,9 @@ author:
     You can add multiple paragraphs here.
   
   social:
-    youtube: https://www.youtube.com/@PietroLCWatercolours
-    instagram: https://www.instagram.com/pietrowatercolor
-    website: https://www.pietrolc.com
+    youtube:   PietroLCWatercolours
+    instagram: pietrowatercolor
+    website:   https://www.pietrolc.com
     
     # This photo will be used in the about section
   picture:
