--- a/_config.yml
+++ b/_config.yml
@@ -34,9 +34,9 @@ author:
     You can add multiple paragraphs here.
   
   social:
-    youtube:   PietroLCWatercolours
-    instagram: pietrowatercolor
-    website:   https://www.pietrolc.com
+    youtube:    https://www.youtube.com/@PietroLCWatercolours
+    instagram:  https://www.instagram.com/pietrowatercolor
+    website:    https://www.pietrolc.com
     
     # This photo will be used in the about section
   picture:
@@ -54,6 +54,10 @@ menu:
     url: /about/
   - title: Blog
     url: /blog/
+    
+legal:
+  - title:             Cookies Policy
+    url:               /cookies-policy/
 
 accent_image: /assets/img/pexels-zaksheuskaya-709412-1568607.jpg
 accent_color: rgb(79,177,186)
