--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,13 @@ keywords:              []
 # It also used by the `jekyll-seo-tag` plugin.
 logo:                  https://pietrolc.github.io/watercolors/assets/img/pietro_128.jpg
 
+author:
+  social:
+    youtube:    https://www.youtube.com/@PietroLCWatercolours
+    instagram:  https://www.instagram.com/pietrowatercolor
+    website:    https://www.pietrolc.com
+    rss:        /feed.xml
+
 defaults:
   - scope:
       type: posts
@@ -37,6 +44,7 @@ author:
     youtube:    https://www.youtube.com/@PietroLCWatercolours
     instagram:  https://www.instagram.com/pietrowatercolor
     website:    https://www.pietrolc.com
+    rss:        /feed.xml
     
     # This photo will be used in the about section
   picture:
