--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ remote_theme: hydecorp/hydejack@v9.2.1
 title: Exploring watercolors with Pietro
 description: A short description of your site (~150 chars)
 
-url: https://pietrolc.github.io/
+url: https://pietrolc.github.io
 baseurl: /watercolors
 
 lang: en # Language of your content
