Fixed issue with YT

--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author:
     You can add multiple paragraphs here.
   
   social:
-    youtube: @PietroLCWatercolours
+    youtube: PietroLCWatercolours
     instagram: pietrowatercolor
     facebook: pietrowatercolor
     website:    https://www.pietrolc.com
