--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -36,7 +36,7 @@ PietroLC:
   # Comment/uncommet to show/hide
   # Icons appear in order, can be rearranged:
   social:
-    github:            pietrolc
+    #github:            pietrolc
     #twitter:         
     #linkedin:        manvendrask
     facebook:         pietrowatercolor
