--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ author:
     youtube: PietroLCWatercolours
     instagram: pietrowatercolor
     facebook: pietrowatercolor
-    website:    https://www.pietrolc.com
+    #website:    https://www.pietrolc.com
     rss:        https://pietrolc.github.io/watercolors/feed.xml
     
     # This photo will be used in the about section
