--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ author:
   
   social:
     youtube:        https://www.youtube.com/@PietroLCWatercolours
-    instagram:      _pietrowatercolor_
-    facebook:       _pietrowatercolor_
+    instagram:      https://instagram.com/pietrowatercolor_
+    facebook:       https://facebook.com/pietrowatercolor_
     #website:    https://www.pietrolc.com
     rss:            https://pietrolc.github.io/watercolors/feed.xml
     
