--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -43,8 +43,8 @@ PietroLC:
     # google:          _number_
     # vk:              _username_
     youtube:           https://www.youtube.com/@PietroLCWatercolours
-    instagram:         https://instagram.com/pietrowatercolor_
-    facebook:          https://facebook.com/pietrowatercolor_
+    instagram:         https://www.instagram.com/pietrowatercolor
+    facebook:          https://www.facebook.com/pietrowatercolor
     # vimeo:           _username_
     # vine:            _username_
     # spotify:         user/_number_
